fixed a couple bugs and streamlined notebooks

--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -62,10 +62,7 @@
     "b = b'hello world'\n",
     "```\n",
     "\n",
-    "These may look the same but the 'b' prefix means that one is bytes\n",
-    "Basically, the on-disk characters on the system are bytes\n",
-    "and the actual symbols in unicode are strings\n",
-    "A good explanation of the difference is [here](http://www.diveintopython3.net/strings.html)."
+    "These may look the same but the 'b' prefix means that one is bytes. Basically, the on-disk characters on the system are bytes and the actual symbols in unicode are strings. A good explanation of the difference is [here](http://www.diveintopython3.net/strings.html)."
    ]
   },
   {
@@ -109,13 +106,10 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
-    "import helper\n",
-    "\n",
-    "def run_test(test):\n",
-    "    unittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(test))"
+    "import helper"
    ]
   },
   {
@@ -135,9 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "\n",
-    "run_test(helper.HelperTest)"
+    "run_test(helper.HelperTest('test_bytes'))"
    ]
   },
   {
