--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -7,16 +7,11 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
-    "import helper\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import helper"
    ]
   },
   {
@@ -49,7 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 1.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_add'))\n",
     "run_test(ecc.FieldElementTest('test_sub'))"
    ]
@@ -85,7 +82,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 2.4\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_mul'))\n",
     "run_test(ecc.FieldElementTest('test_pow'))"
    ]
@@ -119,7 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 3.3\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_div'))"
    ]
   },
@@ -147,7 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 4.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_on_curve'))"
    ]
   },
@@ -169,7 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 5.1\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add0'))"
    ]
   },
@@ -193,7 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 6.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add1'))"
    ]
   },
@@ -217,7 +224,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 7.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add2'))"
    ]
   }
