--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -7,16 +7,11 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
-    "import helper\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import helper"
    ]
   },
   {
@@ -75,7 +70,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -84,7 +79,7 @@
    "source": [
     "# Exercise 1.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_on_curve'))"
    ]
   },
@@ -156,7 +151,7 @@
    "source": [
     "# Exercise 2.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_add1'))"
    ]
   },
@@ -294,16 +289,16 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
     }
    ],
    "source": [
-    "# Exercise 4.2 and 4.3\n",
+    "# Exercise 4.2/4.3\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_rmul'))"
    ]
   },
@@ -427,7 +422,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.214s\n",
+      "Ran 1 test in 0.227s\n",
       "\n",
       "OK\n"
      ]
@@ -436,7 +431,7 @@
    "source": [
     "# Exercise 5.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_pubpoint'))"
    ]
   },
@@ -500,7 +495,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.175s\n",
+      "Ran 1 test in 0.198s\n",
       "\n",
       "OK\n"
      ]
@@ -509,7 +504,7 @@
    "source": [
     "# Exercise 6.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_sec'))"
    ]
   },
@@ -560,7 +555,7 @@
     "\n",
     "for private_key, compressed in ((8883, True), (321, False), (4242424242, False)):\n",
     "    point = private_key*G\n",
-    "    sec = unhexlify(point.sec(compressed=compressed))\n",
+    "    sec = point.sec(compressed=compressed)\n",
     "    h160 = hash160(sec)\n",
     "    raw = b'\\x00' + h160\n",
     "    raw = raw + double_sha256(raw)[:4]\n",
@@ -581,7 +576,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.169s\n",
+      "Ran 1 test in 0.179s\n",
       "\n",
       "OK\n"
      ]
@@ -590,7 +585,7 @@
    "source": [
     "# Exercise 7.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_address'))"
    ]
   },
@@ -673,12 +668,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.315s\n",
+      "Ran 1 test in 0.337s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.319s\n",
+      "Ran 1 test in 0.335s\n",
       "\n",
       "OK\n"
      ]
@@ -687,7 +682,7 @@
    "source": [
     "# Exercise 9.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_verify'))\n",
     "run_test(ecc.PrivateKeyTest('test_sign'))"
    ]
