--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -7,16 +7,11 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
-    "import helper\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import helper"
    ]
   },
   {
@@ -41,7 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 1.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_on_curve'))"
    ]
   },
@@ -68,7 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 2.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_add1'))"
    ]
   },
@@ -112,7 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 4.2/4.3\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.ECCTest('test_rmul'))"
    ]
   },
@@ -139,7 +140,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 5.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_pubpoint'))"
    ]
   },
@@ -166,7 +169,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 6.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_sec'))"
    ]
   },
@@ -195,7 +200,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 7.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_address'))"
    ]
   },
@@ -242,7 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(ecc)\n",
+    "# Exercise 9.2\n",
+    "\n",
+    "reload(ecc)\n",
     "run_test(ecc.S256Test('test_verify'))\n",
     "run_test(ecc.PrivateKeyTest('test_sign'))"
    ]
