--- a/session3/session3.ipynb
+++ b/session3/session3.ipynb
@@ -7,17 +7,12 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
     "import helper\n",
-    "import tx\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import tx"
    ]
   },
   {
@@ -49,7 +44,7 @@
    "source": [
     "# Exercise 1.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.PrivateKeyTest('test_wif'))"
    ]
   },
@@ -89,7 +84,7 @@
    "source": [
     "# Exercise 2.3\n",
     "\n",
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "run_test(helper.HelperTest('test_flip_endian'))\n",
     "run_test(helper.HelperTest('test_little_endian_to_int'))\n",
     "run_test(helper.HelperTest('test_int_to_little_endian'))"
@@ -115,7 +110,7 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_parse_version'))"
    ]
   },
@@ -139,7 +134,7 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_parse_inputs'))"
    ]
   },
@@ -163,7 +158,7 @@
    "source": [
     "# Exercise 5.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_parse_outputs'))"
    ]
   },
@@ -187,7 +182,7 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_parse_locktime'))"
    ]
   },
