--- a/session4/complete/session4.ipynb
+++ b/session4/complete/session4.ipynb
@@ -7,18 +7,13 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
     "import helper\n",
     "import script\n",
-    "import tx\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import tx"
    ]
   },
   {
@@ -116,7 +111,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -125,7 +120,7 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_serialize'))"
    ]
   },
@@ -160,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'outputs': [{'value': 32454049, 'script': '76a914bc3b654dca7e56b04dca18f2566cdaf02e8d9ada88ac', 'addresses': ['1JAHBxA51vwp5C2zpSB15VbxSZK3hVJs2H'], 'script_type': 'pay-to-pubkey-hash', 'spent_by': 'c41d126837ce2f6646ae7c46570f55b3352a827e76c9b5b49e0b48e5ab9804f1'}, {'value': 10011545, 'script': '76a9141c4bc762dd5423e332166702cb75f40df79fea1288ac', 'addresses': ['13achaY7hdFTEHCzWC1Cvuo1FDKzDtAvRt'], 'script_type': 'pay-to-pubkey-hash', 'spent_by': '0cad9cb9550a4953f43494ab629de1fa68dbf864ba2e8c0b86d6f0ffd369cf25'}], 'total': 42465594, 'vout_sz': 2, 'addresses': ['13achaY7hdFTEHCzWC1Cvuo1FDKzDtAvRt', '1GKN6gJBgvet8S92qiQjVxEaVJ5eoJE9s2', '1JAHBxA51vwp5C2zpSB15VbxSZK3hVJs2H'], 'fees': 40000, 'ver': 1, 'double_spend': False, 'received': '2016-05-05T21:22:12Z', 'vin_sz': 1, 'preference': 'high', 'confidence': 1, 'confirmed': '2016-05-05T21:22:12Z', 'block_index': 10, 'size': 226, 'block_hash': '0000000000000000030bae32d85e56296836ce6036d98abc4962aa966813356e', 'block_height': 410404, 'lock_time': 410393, 'hash': '452c629d67e41baec3ac6f04fe744b4b9617f8f859c63b3002f8684e7a4fee03', 'confirmations': 80514, 'inputs': [{'script_type': 'pay-to-pubkey-hash', 'output_value': 42505594, 'output_index': 0, 'prev_hash': 'd1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81', 'sequence': 4294967294, 'script': '483045022100ed81ff192e75a3fd2304004dcadb746fa5e24c5031ccfcf21320b0277457c98f02207a986d955c6e0cb35d446a89d3f56100f4d7f67801c31967743a9c8e10615bed01210349fc4e631e3624a545de3f89f5d8684c7b8138bd94bdd531d2e213bf016b278a', 'addresses': ['1GKN6gJBgvet8S92qiQjVxEaVJ5eoJE9s2'], 'age': 410208}]}\n"
+      "{'addresses': ['13achaY7hdFTEHCzWC1Cvuo1FDKzDtAvRt', '1GKN6gJBgvet8S92qiQjVxEaVJ5eoJE9s2', '1JAHBxA51vwp5C2zpSB15VbxSZK3hVJs2H'], 'preference': 'high', 'hash': '452c629d67e41baec3ac6f04fe744b4b9617f8f859c63b3002f8684e7a4fee03', 'confidence': 1, 'vin_sz': 1, 'double_spend': False, 'fees': 40000, 'block_height': 410404, 'inputs': [{'script': '483045022100ed81ff192e75a3fd2304004dcadb746fa5e24c5031ccfcf21320b0277457c98f02207a986d955c6e0cb35d446a89d3f56100f4d7f67801c31967743a9c8e10615bed01210349fc4e631e3624a545de3f89f5d8684c7b8138bd94bdd531d2e213bf016b278a', 'sequence': 4294967294, 'age': 410208, 'prev_hash': 'd1c789a9c60383bf715f3f6ad9d14b91fe55f3deb369fe5d9280cb1a01793f81', 'addresses': ['1GKN6gJBgvet8S92qiQjVxEaVJ5eoJE9s2'], 'script_type': 'pay-to-pubkey-hash', 'output_value': 42505594, 'output_index': 0}], 'received': '2016-05-05T21:22:12Z', 'outputs': [{'script': '76a914bc3b654dca7e56b04dca18f2566cdaf02e8d9ada88ac', 'addresses': ['1JAHBxA51vwp5C2zpSB15VbxSZK3hVJs2H'], 'script_type': 'pay-to-pubkey-hash', 'spent_by': 'c41d126837ce2f6646ae7c46570f55b3352a827e76c9b5b49e0b48e5ab9804f1', 'value': 32454049}, {'script': '76a9141c4bc762dd5423e332166702cb75f40df79fea1288ac', 'addresses': ['13achaY7hdFTEHCzWC1Cvuo1FDKzDtAvRt'], 'script_type': 'pay-to-pubkey-hash', 'spent_by': '0cad9cb9550a4953f43494ab629de1fa68dbf864ba2e8c0b86d6f0ffd369cf25', 'value': 10011545}], 'lock_time': 410393, 'ver': 1, 'confirmed': '2016-05-05T21:22:12Z', 'total': 42465594, 'size': 226, 'block_index': 10, 'block_hash': '0000000000000000030bae32d85e56296836ce6036d98abc4962aa966813356e', 'confirmations': 81119, 'vout_sz': 2}\n"
      ]
     }
    ],
@@ -257,7 +252,7 @@
    "source": [
     "# Exercise 4.2\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_input_value'))\n",
     "run_test(tx.TxTest('test_input_pubkey'))"
    ]
@@ -320,7 +315,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.363s\n",
+      "Ran 1 test in 0.229s\n",
       "\n",
       "OK\n"
      ]
@@ -329,7 +324,7 @@
    "source": [
     "# Exercise 5.2\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_fee'))"
    ]
   },
@@ -356,7 +351,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -365,7 +360,7 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_hash_to_sign'))"
    ]
   },
