--- a/session4/session4.ipynb
+++ b/session4/session4.ipynb
@@ -7,18 +7,13 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
     "import helper\n",
     "import script\n",
-    "import tx\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import tx"
    ]
   },
   {
@@ -91,7 +86,7 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_serialize'))"
    ]
   },
@@ -175,7 +170,7 @@
    "source": [
     "# Exercise 4.2\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_input_value'))\n",
     "run_test(tx.TxTest('test_input_pubkey'))"
    ]
@@ -227,7 +222,7 @@
    "source": [
     "# Exercise 5.2\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_fee'))"
    ]
   },
@@ -273,7 +268,7 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_hash_to_sign'))"
    ]
   },
