--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -7,18 +7,13 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
     "import helper\n",
     "import script\n",
-    "import tx\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import tx"
    ]
   },
   {
@@ -41,7 +36,7 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_verify_input1'))"
    ]
   },
@@ -65,7 +60,7 @@
    "source": [
     "# Exercise 2.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_sign_input'))"
    ]
   },
@@ -113,7 +108,7 @@
    "source": [
     "# Exercise 5.1\n",
     "\n",
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "run_test(helper.HelperTest('test_p2pkh_address'))\n",
     "run_test(helper.HelperTest('test_p2sh_address'))"
    ]
@@ -144,7 +139,7 @@
    "source": [
     "# Exercise 6.2\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_verify_input2'))"
    ]
   }
