--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -7,19 +7,14 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import block\n",
     "import ecc\n",
     "import helper\n",
     "import script\n",
-    "import tx\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import tx"
    ]
   },
   {
@@ -45,7 +40,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -54,7 +49,7 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_is_coinbase'))"
    ]
   },
@@ -81,7 +76,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -90,7 +85,7 @@
    "source": [
     "# Exercise 2.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_coinbase_height'))"
    ]
   },
@@ -146,7 +141,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -155,7 +150,7 @@
    "source": [
     "# Exercise 3.2\n",
     "\n",
-    "importlib.reload(script)\n",
+    "reload(script)\n",
     "run_test(script.ScriptTest('test_address'))"
    ]
   },
@@ -224,7 +219,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.016s\n",
       "\n",
       "OK\n"
      ]
@@ -233,7 +228,7 @@
    "source": [
     "# Exercise 4.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_parse'))\n",
     "run_test(block.BlockTest('test_serialize'))\n",
     "run_test(block.BlockTest('test_hash'))"
@@ -303,7 +298,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -317,7 +312,7 @@
    "source": [
     "# Exercise 5.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_bip9'))\n",
     "run_test(block.BlockTest('test_bip91'))\n",
     "run_test(block.BlockTest('test_bip141'))"
@@ -437,7 +432,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -446,7 +441,7 @@
    "source": [
     "# Exercise 6.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_target'))"
    ]
   },
@@ -510,7 +505,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -519,7 +514,7 @@
    "source": [
     "# Exercise 7.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_check_pow'))"
    ]
   }
