--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -7,19 +7,14 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import block\n",
     "import ecc\n",
     "import helper\n",
     "import script\n",
-    "import tx\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import tx"
    ]
   },
   {
@@ -42,7 +37,7 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_is_coinbase'))"
    ]
   },
@@ -66,7 +61,7 @@
    "source": [
     "# Exercise 2.1\n",
     "\n",
-    "importlib.reload(tx)\n",
+    "reload(tx)\n",
     "run_test(tx.TxTest('test_coinbase_height'))"
    ]
   },
@@ -95,7 +90,7 @@
    "source": [
     "# Exercise 3.2\n",
     "\n",
-    "importlib.reload(script)\n",
+    "reload(script)\n",
     "run_test(script.ScriptTest('test_address'))"
    ]
   },
@@ -126,7 +121,7 @@
    "source": [
     "# Exercise 4.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_parse'))\n",
     "run_test(block.BlockTest('test_serialize'))\n",
     "run_test(block.BlockTest('test_hash'))"
@@ -159,7 +154,7 @@
    "source": [
     "# Exercise 5.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_bip9'))\n",
     "run_test(block.BlockTest('test_bip91'))\n",
     "run_test(block.BlockTest('test_bip141'))"
@@ -190,7 +185,7 @@
    "source": [
     "# Exercise 6.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_target'))"
    ]
   },
@@ -219,7 +214,7 @@
    "source": [
     "# Exercise 7.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_check_pow'))"
    ]
   }
