--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -7,16 +7,11 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import ecc\n",
-    "import helper\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import helper"
    ]
   },
   {
@@ -84,7 +79,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.029s\n",
       "\n",
       "OK\n"
      ]
@@ -93,7 +88,7 @@
    "source": [
     "# Exercise 1.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_add'))\n",
     "run_test(ecc.FieldElementTest('test_sub'))"
    ]
@@ -196,12 +191,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.013s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -210,7 +205,7 @@
    "source": [
     "# Exercise 2.4\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_mul'))\n",
     "run_test(ecc.FieldElementTest('test_pow'))"
    ]
@@ -292,7 +287,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.009s\n",
       "\n",
       "OK\n"
      ]
@@ -301,7 +296,7 @@
    "source": [
     "# Exercise 3.3\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.FieldElementTest('test_div'))"
    ]
   },
@@ -360,7 +355,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -369,7 +364,7 @@
    "source": [
     "# Exercise 4.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_on_curve'))"
    ]
   },
@@ -396,7 +391,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -405,7 +400,7 @@
    "source": [
     "# Exercise 5.1\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add0'))"
    ]
   },
@@ -459,7 +454,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -468,7 +463,7 @@
    "source": [
     "# Exercise 6.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add1'))"
    ]
   },
@@ -530,7 +525,7 @@
    "source": [
     "# Exercise 7.2\n",
     "\n",
-    "importlib.reload(ecc)\n",
+    "reload(ecc)\n",
     "run_test(ecc.PointTest('test_add2'))"
    ]
   }
