--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -7,20 +7,15 @@
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
-    "import unittest\n",
-    "import importlib\n",
+    "from importlib import reload\n",
+    "from helper import run_test\n",
     "\n",
     "import block\n",
     "import ecc\n",
     "import helper\n",
     "import network\n",
     "import script\n",
-    "import tx\n",
-    "\n",
-    "def run_test(test):\n",
-    "    suite = unittest.TestSuite()\n",
-    "    suite.addTest(test)\n",
-    "    unittest.TextTestRunner().run(suite)"
+    "import tx"
    ]
   },
   {
@@ -49,7 +44,7 @@
    "source": [
     "# Exercise 1.2\n",
     "\n",
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent'))"
    ]
   },
@@ -83,7 +78,7 @@
    "source": [
     "# Exercise 2.2\n",
     "\n",
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent_level0'))"
    ]
   },
@@ -116,7 +111,7 @@
    "source": [
     "# Exercise 3.2\n",
     "\n",
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent_level1'))"
    ]
   },
@@ -184,7 +179,7 @@
    "source": [
     "# Exercise 4.2\n",
     "\n",
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_root'))"
    ]
   },
@@ -232,7 +227,7 @@
    "source": [
     "# Exercise 5.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_validate_merkle_root'))\n",
     "run_test(block.BlockTest('test_calculate_merkle_tree'))"
    ]
@@ -259,7 +254,7 @@
    "source": [
     "# Exercise 6.2\n",
     "\n",
-    "importlib.reload(helper)\n",
+    "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_path'))"
    ]
   },
@@ -309,7 +304,7 @@
    "source": [
     "# Exercise 7.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_create_merkle_proof'))"
    ]
   },
@@ -357,7 +352,7 @@
    "source": [
     "# Exercise 8.2\n",
     "\n",
-    "importlib.reload(block)\n",
+    "reload(block)\n",
     "run_test(block.BlockTest('test_verify_merkle_proof'))"
    ]
   },
@@ -387,7 +382,7 @@
    "source": [
     "# Exercise 9.2\n",
     "\n",
-    "importlib.reload(network)\n",
+    "reload(network)\n",
     "run_test(network.NetworkEnvelopeTest('test_parse'))\n",
     "run_test(network.NetworkEnvelopeTest('test_serialize'))"
    ]
